plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.4.2'
}

group = 'dev.xdpxi'
version = '1.0.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'net.minestom:minestom:2026.06.20-26.1.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.26.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.26.0'
    implementation 'org.yaml:snakeyaml:2.6'
    implementation 'io.github.togar2:MinestomPvP:2026.05.30-26.1.1'
    implementation 'dev.hollowcube:polar:1.16.0'
    implementation 'it.unimi.dsi:fastutil:8.5.18'

    implementation 'io.github.togar2:MinestomFluids'
    implementation 'dev.lu15:simple-voice-chat-minestom:0.2.0-SNAPSHOT'
    implementation 'net.worldseed.particleemitter:ParticleEmitter:1.4.1'

    testImplementation platform('org.junit:junit-bom:6.1.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }

    withJavadocJar()
    withSourcesJar()
}

tasks {
    jar {
        enabled = false
    }

    build {
        dependsOn(shadowJar)
    }

    shadowJar {
        dependsOn gradle.includedBuild('MinestomFluids').task(':jar')
        dependsOn gradle.includedBuild('simple-voice-chat-minestom').task(':jar')
        dependsOn gradle.includedBuild('ParticleEmitter').task(':jar')
        manifest {
            attributes["Main-Class"] = "dev.xdpxi.swiftmc.Main"
            attributes["Enable-Native-Access"] = "ALL-UNNAMED"
        }
        mergeServiceFiles()
        archiveClassifier.set("")
    }

    test {
        useJUnitPlatform()
        jvmArgs '--enable-native-access=ALL-UNNAMED'
    }

    build {
        dependsOn(javadocJar, sourcesJar)
    }
}
